| Bug #34486 | Problem setting falcon_record_chill_threshold and falcon_index_chill_threshold | ||
|---|---|---|---|
| Submitted: | 12 Feb 2008 10:50 | Modified: | 18 Oct 2008 15:24 |
| Reporter: | Philip Stoev | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Falcon storage engine | Severity: | S3 (Non-critical) |
| Version: | 6.0-BK | OS: | Any |
| Assigned to: | Vladislav Vaintroub | CPU Architecture: | Any |
[12 Feb 2008 10:50]
Philip Stoev
[12 Feb 2008 11:01]
Hakan Küçükyılmaz
Verified as described. [11:59] root@(none)>SET GLOBAL falcon_index_chill_threshold = 50; [11:59] root@(none)>show variables like '%chill%'; +-------------------------------+-------+ | Variable_name | Value | +-------------------------------+-------+ | falcon_index_chill_threshold | 4 | | falcon_record_chill_threshold | 5 | +-------------------------------+-------+ 2 rows in set (0.03 sec) [12:00] root@(none)>select @@GLOBAL.falcon_index_chill_threshold; +---------------------------------------+ | @@GLOBAL.falcon_index_chill_threshold | +---------------------------------------+ | 4 | +---------------------------------------+ 1 row in set (0.00 sec)
[12 Feb 2008 22:53]
Kevin Lewis
Vlad, Please look into this problem. It is similar to 33041.
[23 Feb 2008 8:15]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/42896 ChangeSet@1.2822, 2008-02-23 09:14:00+01:00, vvaintroub@wva. +7 -0 Isolation level should be set before starting a transaction. --- Bug#34486 : falcon_index_chill_threshold, falcon_record_chill_threshold cannot be set. Solved by passing new values down to Configuration.
[25 Feb 2008 14:44]
Kevin Lewis
Using StorageHandler::dictionaryConnection is a good approach to getting the values set in database->configuration.
[12 Mar 2008 23:02]
Bugs System
Pushed into 6.0.4-alpha
[13 Mar 2008 15:57]
Hakan Küçükyılmaz
Fix is in 6.0.5-alpha.
[18 Oct 2008 15:24]
Jon Stephens
Documented bugfix in the 6.0.5 manual as follows:
SET GLOBAL falcon_record_chill_threshold and SET GLOBAL
falcon_index_chill_threshold did not work.
