Bug#34486 : falcon_index_chill_threshold, falcon_record_chill_threshold cannot be set.

Solved by passing new values down to Configuration.